--- a/app/src/main/res/layout/li_url.xml
+++ b/app/src/main/res/layout/li_url.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:foreground="?android:attr/selectableItemBackground"
+        android:background="#ffffff"
         android:minHeight="?attr/listPreferredItemHeight"
         android:orientation="vertical"
         android:padding="16dp"
@@ -19,21 +19,24 @@
             android:orientation="horizontal">
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/url_short"
+                android:id="@+id/url_original"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:ellipsize="end"
                 android:gravity="center_vertical"
+                android:maxLines="2"
                 android:textAppearance="?android:attr/textAppearanceListItem"
-                tools:text="https://shorturl.com/8934§%" />
+                tools:text="https://shorturl.com/8934§%sdfjsldkjflskdjfsldkfjslödkfjösldkfjgs" />
 
             <ImageView
                 android:id="@+id/url_delete"
-                android:layout_width="44dp"
-                android:layout_height="44dp"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
                 android:layout_gravity="top"
                 android:clickable="true"
                 android:focusable="true"
+                android:padding="8dp"
                 android:src="@drawable/ic_del" />
         </LinearLayout>
 
@@ -42,7 +45,7 @@
             android:layout_height="2dp" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/url_original"
+            android:id="@+id/url_short"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
@@ -50,8 +53,9 @@
             tools:text="http://www.google.com/lasdnflaskjdf" />
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/url_copy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/url_copy"/>
+            android:text="@string/url_copy" />
     </LinearLayout>
 </layout>
