--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,6 +10,6 @@
     <fragment
             android:id="@+id/FirstFragment"
             android:name="com.mobilekosmos.android.shortly.ui.MainFragment"
-            tools:layout="@layout/fragment_main_content">
+            tools:layout="@layout/fragment_main">
     </fragment>
 </navigation>
