--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -20,7 +20,7 @@
             android:id="@+id/main_urls_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:visibility="visible"
+            tools:visibility="gone"
             android:visibility="@{viewModel.urls.size == 0 ? View.GONE : View.VISIBLE}"
             app:layout_constrainedHeight="true"
             app:layout_constraintBottom_toTopOf="@+id/main_input_container"
@@ -79,7 +79,7 @@
             app:layout_constraintBottom_toTopOf="@+id/main_input_container"
             app:layout_constraintEnd_toStartOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:visibility="gone"
+            tools:visibility="visible"
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -95,7 +95,8 @@
                     android:src="@drawable/ic_logo"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:ignore="ContentDescription" />
 
                 <ImageView
                     android:id="@+id/imageView2"
@@ -107,7 +108,8 @@
                     android:src="@drawable/ic_illustration"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView" />
+                    app:layout_constraintTop_toBottomOf="@+id/imageView"
+                    tools:ignore="ContentDescription" />
 
                 <TextView
                     android:id="@+id/textView"
@@ -170,7 +172,8 @@
                     android:inputType="textUri"
                     android:maxLines="1"
                     android:text="@string/URL"
-                    android:textColorHint="#616161" />
+                    android:textColorHint="#616161"
+                    tools:ignore="TextContrastCheck" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.button.MaterialButton
