--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -31,15 +31,6 @@
             app:layout_constraintWidth_percent="@dimen/content_max_width_percent"
             tools:visibility="gone">
 
-            <ProgressBar
-                android:id="@+id/loading_spinner"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                app:clubsList="@{viewModel.urls}"
-                app:isNetworkError="@{safeUnbox(viewModel.eventNetworkError)}"
-                tools:visibility="gone" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -79,7 +70,7 @@
         <ScrollView
             android:id="@+id/main_header"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:visibility="@{viewModel.urls.size == 0 ? View.VISIBLE : View.GONE}"
             app:layout_constrainedHeight="true"
             app:layout_constraintBottom_toTopOf="@+id/main_input_container"
@@ -144,6 +135,19 @@
                     app:layout_constraintTop_toBottomOf="@+id/textView" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
+
+        <ProgressBar
+            android:id="@+id/main_loading_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@+id/main_input_container"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:elevation="8dp"
+            app:isNetworkError2="@{safeUnbox(viewModel.eventNetworkError)}"
+            android:visibility="@{viewModel.spinner == false ? View.GONE : View.VISIBLE}"
+            tools:visibility="visible" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/main_input_container"
